--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.0",
+    "@expo/webpack-config": "^0.12.66",
+    "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
@@ -20,6 +22,7 @@
     "expo": "~41.0.0",
     "expo-linear-gradient": "~9.1.0",
     "expo-status-bar": "~1.0.4",
+    "pullstate": "^1.22.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
